--- a/temp.html
+++ b/temp.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -10,6 +9,7 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
+<html>
   <style>
     body{
       font-size: 15pt;
@@ -17,14 +17,13 @@
     }
   </style>
 
-  <title>NBA Database Project - DBAs</title>
+    <title>NBA Database Project - Top 5 Scoring Players in a Game </title>
 
   <body>
   <div class=container>
   <h1><strong>NBA Database Project</strong></h1>
 
-    <h1>Database Administrators</h1>
-
+    <h1>Top 5 Scoring Players in a Game</h1>
 
     {% if isDBA %}
     <div>
@@ -33,38 +32,13 @@
     </div>
     {% endif %}
 
-    {% if isDBA %}
-    <div class="container" style="border:2px solid #4259f4">
-      {% if invalidEntry %}
-      <h5 style="color:red">Invalid Entry. Please try again. </h5>
-      {% endif %}
-      <h3 style="color:#4259f4"><strong>Add a DBA</strong></h3>
-      <h4 style="color:#4259f4"> DBA-access only </h4>
-      <br>
-    <form method="POST" action="/dba">
-        <p>
-
-          dba_id: <input type="text" name="dba_id" maxlength="5"> <br>
-          fname: <input type="text" name="fname" maxlength="80"> <br>
-          lname: <input type="text" name="lname" maxlength="80"> <br>
-          email: <input type="text" name="email" maxlength="80"> <br>
-          dob: <input type="date" class="form-control" name="dob" placeholder="MM/DD/YYYY"/> <br>
-          sex: <input type="radio" name="sex" value="0">Male<br>  <input type="radio" name="sex" value="1">Female<br>
-
-        <input type="submit" value="Add"></p>
-        <br>
-    </form>
+    <div>
+      {% for n in data %}
+      <div>{{n}}</div>
+      {% endfor %}
     </div>
-    {% endif %}
 
-    {% if isDBA %}
-    <br>
-    {% for n in data %}
-    <div>{{n}}</div>
-    {% endfor %}
-    <p>
-    {% endif %}
-
+    </div>
   </body>
 
 </html>
